--- a/Project/Project_v_2.ipynb
+++ b/Project/Project_v_2.ipynb
@@ -428,7 +428,9 @@
     "X1 = data1[['Year']].values\n",
     "X2 = data1[['State_code']].values\n",
     "X3 = data1[['Crop_code']].values\n",
-    "X"
+    "X\n",
+    "#Crop_code\n",
+    "# Bajra=0,Cotton=1,Jowar=2,Maize=3,Millets=4,Paddy=5,Ragi=6,Rice=7,Sugarcane=8,Wheat=9"
    ]
   },
   {
@@ -544,7 +546,7 @@
     }
    ],
    "source": [
-    "plt.scatter(X1,Y)"
+    "plt.scatter(X1,Y)#year"
    ]
   },
   {
@@ -576,7 +578,7 @@
     }
    ],
    "source": [
-    "plt.scatter(X2,Y)"
+    "plt.scatter(X2,Y)#state"
    ]
   },
   {
@@ -608,7 +610,7 @@
     }
    ],
    "source": [
-    "plt.scatter(X3,Y)"
+    "plt.scatter(X3,Y)#Crop"
    ]
   },
   {
